--- a/UNICOMTIC_MANAGEMENT/UNICOMTIC_MANAGEMENT.csproj
+++ b/UNICOMTIC_MANAGEMENT/UNICOMTIC_MANAGEMENT.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DatabaseManager.cs" />
     <Compile Include="Repositories\DbConfig.cs" />
+    <Compile Include="Repositories\UserRepository .cs" />
     <Compile Include="Services\StudentsCoureses.cs" />
     <Compile Include="View\Adminlogin.cs">
       <SubType>Form</SubType>
