--- a/UNICOMTIC_MANAGEMENT/UNICOMTIC_MANAGEMENT.csproj
+++ b/UNICOMTIC_MANAGEMENT/UNICOMTIC_MANAGEMENT.csproj
@@ -54,7 +54,6 @@
     <Compile Include="Controller\CourseController.cs" />
     <Compile Include="Controller\ExamContoller.cs" />
     <Compile Include="Controller\LecturerController.cs" />
-    <Compile Include="Controller\Logincontroller.cs" />
     <Compile Include="Controller\MarkController.cs" />
     <Compile Include="Controller\RoomController.cs" />
     <Compile Include="Controller\StaffController.cs" />
@@ -76,8 +75,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DatabaseManager.cs" />
     <Compile Include="Repositories\DbConfig.cs" />
-    <Compile Include="Repositories\UserRepository .cs" />
     <Compile Include="Services\StudentsCoureses.cs" />
+    <Compile Include="Session\UserSession.cs" />
     <Compile Include="View\Adminlogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,11 +101,23 @@
     <Compile Include="View\ExamForm.Designer.cs">
       <DependentUpon>ExamForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\LactuerViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\LactuerViewForm.Designer.cs">
+      <DependentUpon>LactuerViewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\LecturerForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\LecturerForm.Designer.cs">
       <DependentUpon>LecturerForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\LecuterDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\LecuterDetails.Designer.cs">
+      <DependentUpon>LecuterDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="View\MainFrom.cs">
       <SubType>Form</SubType>
@@ -162,6 +173,12 @@
     <Compile Include="View\TimebletableForm.Designer.cs">
       <DependentUpon>TimebletableForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Timetableview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Timetableview.Designer.cs">
+      <DependentUpon>Timetableview.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Userlogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +193,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="View\Adminlogin.resx">
       <DependentUpon>Adminlogin.cs</DependentUpon>
@@ -189,8 +207,14 @@
     <EmbeddedResource Include="View\ExamForm.resx">
       <DependentUpon>ExamForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\LactuerViewForm.resx">
+      <DependentUpon>LactuerViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\LecturerForm.resx">
       <DependentUpon>LecturerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\LecuterDetails.resx">
+      <DependentUpon>LecuterDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainFrom.resx">
       <DependentUpon>MainFrom.cs</DependentUpon>
@@ -219,6 +243,9 @@
     <EmbeddedResource Include="View\TimebletableForm.resx">
       <DependentUpon>TimebletableForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Timetableview.resx">
+      <DependentUpon>Timetableview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Userlogin.resx">
       <DependentUpon>Userlogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -236,7 +263,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\R.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OIP.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
